# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/5.1/en/

Version 5.1.48

  - Fix for Bug#93590 (29054329), javax.net.ssl.SSLException: closing inbound before receiving peer's close_notify.

  - Fix for Bug#29329326, PLEASE AVOID SHOW PROCESSLIST IF POSSIBLE.

  - Fix for Bug#91317 (28207422), Wrong defaults on collation mappings.

  - Fix for Bug#29244101, ADD MAPPING FOR UTF8MB4_ZH_0900_AS_CS COLLATION.

  - Fix for Bug#92508 (28747636), mysql-connector in bootclasspath causing memory leak.

Version 5.1.47

  - Fix for Bug#28449601, MASTER : UNITTEST FOR BUG#22305979 (TESTBUG22305979) STILL FAILS ON QA SETUP.

  - Fix for Bug#81063 (23098159), w/ rewriteBatchedStatements, when 2 tables involved, the rewriting not correct.

  - Fix for Bug#84813 (25501750), rewriteBatchedStatements fails in INSERT.

  - Fix for Bug#81196 (23227334), CONNECTOR/J NOT FOLLOWING DATABASE CHARACTER SET.

  - Fix for Bug#72609 (18749544), SETDATE() NOT USING A PROLEPTIC GREGORIAN CALENDAR.

  - Fix for Bug#87534 (26730196), UNION ALL query fails when useServerPrepStmts=true on database connection.
    Test case only. Base bug fixed in MySQL 5.7.22.

  - Fix for Bug#89948 (27658489), Batched statements are not committed for useLocalTransactionState=true.

  - Fix for BUG#80532 (22847443), ENCODING OF RESULTSET.UPDATEROW IS BROKEN FOR NON ASCII CHARCTERS.

  - Fix for BUG#22305979, WRONG RECORD UPDATED IF SENDFRACTIONALSECONDS=FALSE AND SMT IS SCROLLABLE.

  - Fix for BUG#90024 (27677574), SOME TESTS FAILED AGAINST MYSQL 8.0.5 BECAUSE OF DEPRECATED FEATURES REMOVAL.

Version 5.1.46

  - WL#11629, Change caching_sha2_password padding.

  - Fix for Bug#86741 (26314325), Multi-Host connection with autocommit=0 getAutoCommit maybe wrong.

  - Fix for Bug#27231383, PROVIDE MAVEN-FRIENDLY COMMERCIAL PACKAGES WITHOUT "-BIN".

  - Fix for Bug#26819691, SETTING PACKETDEBUGBUFFERSIZE=0 RESULTS IN CONNECTION FAILURE.

  - WL#11200, Add caching_sha2_password support.
