@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2002, 2018, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2002, 2019, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -406,6 +406,10 @@ public class Field {
             sqlEx.initCause(ex);
             throw sqlEx;
         }
+    }
+
+    public int getCollationIndex() throws SQLException {
+        return this.collationIndex;
     }
 
     public synchronized String getCollation() throws SQLException {
